# cmake-external-example

./: CMakeLists.txt  README.md  main.c
